# Crack-CLI

./: .gitignore  pyproject.toml  readme.md
docs/: cli-usage.md  flask-branch-visualizer.md  init.md  workflow-design.md
skills/crack-cli/: SKILL.md
src/: cli.ts  git.ts  implementer.ts  index.ts  merge-agent.ts  merge.ts  plan-readiness.ts  pr.ts  router.ts  run-all.ts
src/crack/: __init__.py  cli.py  router.py  state.py
tests/: cli.test.ts  implementer.test.ts  merge-agent.test.ts  merge.test.ts  pr.test.ts  router.test.ts  run-all.test.ts  test_router.py
tools/flask_branch_visualizer/: app.py
tools/flask_branch_visualizer/tests/: test_app.py  test_parser.py  test_state.py
