[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "crack"
version = "0.1.0"
description = "Markdown-backed Codex workflow orchestrator."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
crack = "crack.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
